# polymerai

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  README_zh.md  build.sh  config.example.yaml  ecosystem.config.js
backend/: pyproject.toml  result.POSCAR  verify_terminal_node.py
backend/app/gateway/: app.py  async_task_dispatcher.py  auth_middleware.py  authz.py  csrf_middleware.py  deps.py  langgraph_auth.py  path_utils.py  services.py
backend/app/gateway/auth/: local_provider.py
backend/app/gateway/routers/: artifacts.py  async_tasks.py  auth.py  memory.py  runs.py  skills.py  thread_runs.py  threads.py  uploads.py
backend/docs/: API.md  AUTH_UPGRADE.md  STREAMING.md  THREAD_SESSION_AND_USER_ID.md  WORKFLOW_RUN_API.md
backend/extensions/: README.md  __init__.py
backend/extensions/_core/: __init__.py  agent_request.py  agents_db.py  app_db.py  app_schema_bootstrap.py  db_errors.py  public_agent_links.py  rag.py  rag_flow.py  ragflow_user_key.py  skills_db.py
backend/extensions/_core/config/: __init__.py  agents.py  loader.py  tools.py  tools_compat.py
backend/extensions/_core/crawler/: __init__.py  article.py  crawler.py  jina_client.py  readability_extractor.py
backend/extensions/_core/llms/: __init__.py  llm.py  rate_limiter.py
backend/extensions/_core/workflow/: __init__.py  compiler.py  format_skill_output.py  run_detail.py  skill_runner.py  terminal_output.py  workflow_async_tasks.py  workflow_interrupt.py  workflow_llm_agent.py  workflow_output_paths.py  workflow_paths.py  workflow_request.py  (+3 more)
backend/extensions/agents_db/: __init__.py  router.py
backend/extensions/auth/: casdoor.py  crypto.py  db.py  dependencies.py  jwt.py  models.py  password.py  routes.py  satoken.py  user_provision.py
backend/extensions/new_sam/: router.py
backend/extensions/public_agent/: __init__.py  rate_limit.py  router.py
backend/extensions/toolbox/: __init__.py  db.py  routes.py
backend/extensions/workflow_tools/: router.py
backend/extensions/workflows/: __init__.py  router.py
backend/scripts/: backfill_skill_labels.py  gate_threads_search_perf.py  import_workflows_from_agentic.py  import_workflows_from_agentic_db.py  init_app_database.py  init_toolbox_skills_metadata.py  migrate_satoken_shadow_users.py  migrate_threads_meta_once.py  migrate_user_isolation.py  normalize_chat_owner_from_threads_meta.py  run_due_async_task_polls_once.py  run_threads_meta_migration_once.sh  seed_vasp_band_workflow.py  sync_ragflow_user_keys.py  test_workflow_skill_scnet.py  truncate_async_tasks.py  update_sam_agent_prompt.py  verify_pg_chat_migration.py
backend/scripts/sql/: async_tasks_pg.sql  workflow_skills_mapping.sql
backend/tests/: README.md  _router_auth_helpers.py  test_agents_chat_api.py  test_agents_db_generate_prompt.py  test_agents_db_memory_enabled.py  test_agents_db_swarm.py  test_artifacts_router.py  test_async_task_capture_middleware.py  test_async_task_envelope.py  test_async_task_integration.py  test_auth_middleware.py  test_auth_type_system.py  test_casdoor_auth.py  test_csrf_middleware.py  test_format_skill_detach.py  test_format_skill_output.py  test_format_skill_output_fallback.py  test_gateway_services.py  test_langgraph_auth.py  test_memory_enabled_toggle.py  test_memory_middleware_toggle.py  test_memory_queue.py  test_memory_thread_meta_isolation.py  test_migration_user_isolation.py  test_node_labels.py  test_output_parser_node.py  test_public_agent.py  test_ragflow_user_key.py  test_resolve_run_status_from_node_tasks.py  test_run_detail.py  test_run_journal.py  test_run_manager.py  test_satoken_auth.py  test_serialization.py  test_skill_runner_detach_errors.py  test_skills_dependencies.py  test_skills_loader.py  test_skills_parser.py  test_swarm_orchestration.py  test_terminal_output.py  (+9 more)
skills/public/modeling/: PLAN.md  README.md  SKILL.md  design.md  modeling_cli.py  pyproject.toml
skills/public/vasp-analysis/: CLAUDE.md  README.md  SKILL.md  pyproject.toml
skills/public/vasp-incar/: CLAUDE.md  README.md  SKILL.md  pyproject.toml
skills/public/vasp-potcar/: CLAUDE.md  README.md  SKILL.md  potcar.py  pyproject.toml
(+599 files in other folders)
