[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeling"
version = "0.1.0"
description = "原子尺度建模系统"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
full = [
    "ase>=3.22",
    "pymatgen>=2023.0",
    "rdkit>=2023.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modeling*"]
