[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vasp-incar"
version = "0.1.0"
description = "VASP INCAR/KPOINTS generation, validation, and explanation skill"
requires-python = ">=3.10"
dependencies = [
    "pymatgen>=2024.1.1",
    "seekpath>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
vasp-incar = "vasp_incar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vasp_incar"]
